@startuml

skinparam classAttributeIconSize 0

interface Placeable{
    +addToLayer()
    +setLocation()
}
class GameScreen {
    -gdx.TiledMap map
    -input()
    -logic()
    -draw()
}
class Building{
    -int x
    -int y
    +addToLayer()
    +setLocation()
}
class Path{
    - int x
    - int y
    +addToLayer()
    +setLocation()
}
class UIManager{
    -Button[] buttons
    +addButton()
    +removeButton()
}
class BuildingManager{
    -Building[] buildings
    +createBuilding()
    +removeBuilding()
    +getBuildingCounts()
}
class PathManager{
    -Path[] paths
    +createPath()
    +removePath()
    +getPathConnections()
}
class HighlightManager{
    +updateHighlight()
    +clearHighlight()
}
class SatisfactionManager{
    -int satisfaction
    +updateSatisfaction()
    +getCurrentSatisfaction()
}
class Timer{
    -float time
    +addTime()
    +getTime()
}

Placeable <|.. Building
Placeable <|.. Path
GameScreen *-- BuildingManager
GameScreen *-- PathManager
GameScreen *-- HighlightManager
GameScreen *-- UIManager
GameScreen *-- SatisfactionManager
GameScreen *-- Timer
BuildingManager *-- Building
PathManager *-- Path



@enduml
